# BeeFunding

./: pyproject.toml
.github/workflows/: main_beefunding3.yml
crowdfunding/: settings.py  urls.py
funding/: admin.py  context_processors.py  urls.py  views.py
funding/models/: __init__.py  campania.py  forma_pago.py  historial_pago.py  sol_campania.py
funding/templates/funding/: campania.html  categoria.html  categoria_ajax.html  historias.html  historias_ajax.html  home.html  home_ajax.html  index.html  nosotros.html  search.html  solCampania.html
funding/templatetags/: tags.py
static/css/: main.css
static/js/: guardar.js
